Fix contacts on mobile

--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -6,15 +6,13 @@
   align-items: center;
   justify-content: center;
   
-  .contact-row {
+  .contact-column {
     margin: 1rem;
     display: flex;
     flex-direction: column;
-    justify-content: justify;
 
     .contact-item {
       display: flex;
-      flex-direction: center;
 
       .contact-icon {
         height: 30px;
@@ -32,7 +30,13 @@
 
 @media only screen and (max-width: 640px) {
   .contact {
-    align-items: center;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
+
+    .contact-column {
+      width: 220px;
+      margin: 0;
+    }
   }
 }
